--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <br>
 <br>
 <br>
-    <div class="form-container">
+    <div class="bloco5">
         <h2>Como adicionar texto, imagem e vídeo?</h2>
             <p><h3>Texto</h3> <pre><code>&lt;!DOCTYPE html&gt;
                 &lt;html lang=&quot;pt-br&quot;&gt;
